--- a/StarProject/Views/Shared/_Layout.cshtml
+++ b/StarProject/Views/Shared/_Layout.cshtml
@@ -351,7 +351,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#"><i class="fa-solid fa-power-off"></i>登出</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Login" asp-action="Index"><i class="fa-solid fa-power-off"></i>登出</a></li>
                             </ul>
                         </li>
                     </ul>
